style.css
/* ... */
/**
* Контент: слайдер товаров
**/
.index-slider {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}
.index-slider__wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}
.index-slider__wrapper .item,
.index-slider__item,
.index-slider__picture,
.index-slider__circle {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}
.index-slider__item {
  position: relative;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}
.index-slider__picture {
  position: relative;
  width: 441px;
}
.index-slider__circle {
  position: absolute;
  left: 0;
  right: 0;
  z-index: 40;
  
  background-image: url(img/circle.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: 90%;
}
.index-slider__picture img {
  position: relative;
  z-index: 50;
  
  width: auto;
  height: 100%;
  margin: 0 auto;
}
.index-slider__counter {
  position: absolute;
  left: 150px;
  top: 50px;
  
  font-size: 21px;
  color: #2a323c;
  font-weight: 700;
}
.index-slider__counter .separator {
  font-weight: 400;
}
.index-slider__counter sup {
  top: -10px;
  
  font-weight: 400;
  font-size: 12px;  
}
.index-slider__add-cart {
  position: absolute;
  right: -50px;
  top: 50px;
  
  font-size: 21px;
  color: #2a323c;
  font-weight: 600;
  text-decoration: none;
}
.index-slider__add-cart::before {
  content: "";
  
  position: absolute;
  top: 81px;
  right: 52px;

  display: block;
  width: 150px;
  
  border-top: 1px solid #dfdfdf;

  -webkit-transform: rotate(135deg);
  transform: rotate(135deg);
}
.index-slider__price {
  position: absolute;
  left: -94px;
  bottom: 50px;
  
  font-size: 21px;
  color: #2a323c;
  font-weight: 600;
}
.index-slider__price::after {
  content: "";
  
  position: absolute;
  top: -56px;
  right: -140px;

  display: block;
  width: 150px;
  
  border-top: 1px solid #dfdfdf;

  -webkit-transform: rotate(135deg);
  transform: rotate(135deg);
}
.index-slider__price span {
  font-weight: 300;
}
/**
* Подписка Инстаграмм
**/
.fallow-me {
  position: absolute;  
  right: 0;
  bottom: 0;
  
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: flex-end;
  height: 220px;
  width: 97px;
  
  text-decoration: none;
  
  background-color: #fff;
}
.fallow-me__icon {
  position: relative;
   
  width: 19px;
  height: 19px;
  margin-bottom: 55px;
  
  background-image: url(img/insta-ico.png);
  background-repeat: no-repeat;
  background-position: center;
}
.fallow-me__icon::after {
  content: "fallow me";
  
  position: absolute;
  bottom: 20px;
  
  display: block;
  
  font-size: 14px;
  line-height: 19px;
  white-space: nowrap;
  color: #2f3641;
  letter-spacing: 1.4px;
  
  -webkit-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: left top;
  transform-origin: left top;
  
}
/**
* Меню
**/
.overlay-menu {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 100;
  
  display: none;
  height: 100vh;
  padding: 110px 0 110px 214px;
  
  border: 7px solid #fff;
  background-color: #2f3641;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
.site-screen--menu-open {
  position: relative;
}
.site-screen--menu-open .overlay-menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}
.overlay-menu__main {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  margin: 0 0 63px 0;
  
  list-style: none;
}
.overlay-menu__main li {
  margin-right: 84px;
}
.overlay-menu__main a {
  font-family: "Montserrat";
  font-weight: 600;
  font-size: 36px;
  color: #fff;
  text-decoration: none;
}
.overlay-menu__category {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding: 30px 0;
  margin: 0 0 55px 0;
  
  list-style: none;
  
  background-image: url(img/site-title.png);
  background-position: center left;
  background-repeat: no-repeat;
  background-size: contain;
}
.overlay-menu__category li {
  margin-right: 57px;
}
.overlay-menu__category a {
  font-family: "Montserrat";
  font-weight: 500;
  font-size: 25px;
  color: #fff;
  text-decoration: none;
}
.overlay-menu__category a:hover {
  color: #cdb48b;
}
.overlay-menu__contact {
  font-family: "Montserrat";
  font-weight: 500;
  font-size: 25px;
  color: #fff;
}
.overlay-menu__contact p:nth-child(2) {
  color: #cdb48b;
}
/**
* Шапка при открытом меню
**/
.site-screen--menu-open .menu-trigger {
  position: relative;
  z-index: 110;
  
  background-color: #2f3641;
  background-image: url(img/hamburger-v.png);
}
.site-screen--menu-open .site-header__lang {
  position: relative;
  z-index: 110;
}
.site-screen--menu-open .site-header__lang a {
  color: #fff;
}
.site-screen--menu-open .site-header__lang .active a {
  color: #c3a776;
}
.site-screen--menu-open .site-header__lang li:first-child::after {
  border-color: #fff;
}
.site-screen--menu-open .site-header__cart {
  position: relative;
  z-index: 110;
  
  background-image: url(img/cart-v.png);
}
.site-screen--menu-open .site-header__cart::after {
  background-color: #c3a675;
}
/**
* Карточка товара: контент
**/
.single-product {
   background-color: #f0f0f0;
}
.single-product__data {
  height: calc(100vh - 117px);
  margin-left: 105px;
  
  background-color: #e4e4e4;
}
.single-product__data {
  padding-top: 70px;
  padding-left: 100px;
  padding-right: 100px;
}
.single-product__title {
  margin-bottom: 20px;
  
  font-weight: 700;
  color: #2f3641;
  font-size: 21px;
}
/* ... */

